--- a/LectionTask_2/task_b/Dockerfile
+++ b/LectionTask_2/task_b/Dockerfile
@@ -1,8 +1,6 @@
 FROM nginx
 COPY ./index.html /usr/share/nginx/html/
 COPY ./entrypoint.sh /
-#CMD ls 
 ENV MY_NAME aaa
+WORKDIR 
 CMD /entrypoint.sh
-#CMD echo ${MY_NAME}
-#ENTRYPOINT echo ${MY_NAME} >> /var/www/html/index.html
