--- a/LectionTask_3/Jenkinsfile
+++ b/LectionTask_3/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          docker.build(registry + ":$BUILD_NUMBER", "-f LectionTask_2/task_b/Dockerfile")
+          docker.build(registry + ":$BUILD_NUMBER", "LectionTask_2/task_b/")
         }
       }
     }
