Add path to Dockerfile

--- a/LectionTask_2/task_b/Dockerfile
+++ b/LectionTask_2/task_b/Dockerfile
@@ -2,5 +2,5 @@ FROM nginx
 COPY ./index.html /usr/share/nginx/html/
 COPY ./entrypoint.sh /
 ENV MY_NAME aaa
-WORKDIR 
+#WORKDIR  
 CMD /entrypoint.sh
