Add path to Dockerfile

--- a/LectionTask_3/Jenkinsfile
+++ b/LectionTask_3/Jenkinsfile
@@ -12,6 +12,10 @@ pipeline {
           customImage.push('latest')
         }
       }
+      docker.withRegistry('https://registry.hub.docker.com', 'docker-hub-credentials') {
+        app.push("${env.BUILD_NUMBER}")
+        app.push("latest")
+      }
     }
   }
 }
