--- a/LectionTask_3/Jenkinsfile
+++ b/LectionTask_3/Jenkinsfile
@@ -8,8 +8,7 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          def customImage = docker.build(registry + ":$BUILD_NUMBER", "LectionTask_2/task_b/")
-          customImage.push('latest')
+          def app = docker.build(registry + ":$BUILD_NUMBER", "LectionTask_2/task_b/")
           docker.withRegistry('https://registry.hub.docker.com', 'docker-hub-credentials') {
             app.push("${env.BUILD_NUMBER}")
             app.push("latest")
