--- a/LectionTask_3/Jenkinsfile
+++ b/LectionTask_3/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
       steps{
         script {
           def app = docker.build(registry + ":$BUILD_NUMBER", "LectionTask_2/task_b/")
-          docker.withRegistry('https://registry.hub.docker.com', 'docker-hub-credentials') {
+          docker.withRegistry('https://registry.hub.docker.com') {
             app.push("${env.BUILD_NUMBER}")
             app.push("latest")
           }
