--- a/LectionTask_3/Jenkinsfile
+++ b/LectionTask_3/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
   environment {
-    registry = "docker_hub_account/repository_name"
+    registry = "127.0.0.1:5000/repository_name"
     registryCredential = 'dockerhub'
   }
   agent any
@@ -9,7 +9,7 @@ pipeline {
       steps{
         script {
           def app = docker.build(registry + ":$BUILD_NUMBER", "LectionTask_2/task_b/")
-          docker.withRegistry('https://registry.hub.docker.com') {
+          docker.withRegistry('127.0.0.0:5000') {
             app.push("${env.BUILD_NUMBER}")
             app.push("latest")
           }
