--- a/LectionTask_3/Jenkinsfile
+++ b/LectionTask_3/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
   environment {
-    registry = "127.0.0.1:5000/repository_name"
+    registry = "127.0.0.1:5000/nginx_my"
     registryCredential = 'dockerhub'
   }
   agent any
